<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color_primary_dark"
    android:fillViewport="true">

    <LinearLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:orientation="vertical"
            android:weightSum="4">

            <TextView
                android:id="@+id/txt_companyName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/pharma_welcome_you"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <android.support.v7.widget.CardView
                android:layout_width="250dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="2.5"
                card_view:cardCornerRadius="5dp">

                <ImageView
                    android:id="@+id/company_logo"
                    android:layout_width="144dp"
                    android:layout_height="144dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:src="@mipmap/ic_hidoc_logo" />

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_company_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/sample_url_text"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@string/Change"
                    android:textColor="@color/blue_transparent_pressed"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/rounded_change_edittext"
                android:drawableStart="@mipmap/ic_person_black_24dp"
                android:drawablePadding="24dp"
                android:hint="@string/user_id"
                android:inputType="textNoSuggestions"
                android:paddingStart="24dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textColor="@color/color_dark_gray"
                android:textSize="16sp"
                android:textStyle="normal|italic" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/rounded_change_edittext"
                android:drawableStart="@mipmap/ic_dialpad_black_24dp"
                android:drawablePadding="24dp"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:paddingStart="24dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textColor="@color/color_dark_gray"
                android:textSize="16sp"
                android:textStyle="normal|italic" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/comp_btn_nxt"
                android:text="@string/login_btn"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/blue_transparent_pressed"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>