<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color_primary_dark"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/parent_layout"
        android:weightSum="2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:gravity="center">

            <android.support.v7.widget.CardView
                android:layout_width="250dp"
                android:layout_height="250dp"
                card_view:cardCornerRadius="5dp">

                <ImageView
                    android:id="@+id/iv_company_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_hidoc_logo"/>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_company_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enter_your_company_details"
                android:textSize="14sp"
                android:textColor="@color/white" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <EditText
                        android:id="@+id/edit_company"
                        android:layout_width="0dp"
                        android:layout_weight="1.1"
                        android:layout_height="40dp"
                        android:paddingLeft="16dp"
                        android:background="@drawable/left_rounded_edittext"
                        android:drawableLeft="@mipmap/ic_link_black_24dp"
                        android:drawablePadding="@dimen/activity_horizontal_margin"
                        android:hint="Company"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="italic"
                        android:imeOptions="actionDone"
                        android:inputType="textNoSuggestions"
                        android:singleLine="true">

                    </EditText>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_weight="0.8"
                        android:layout_height="40dp"
                        android:background="@drawable/right_rounded_edittext"
                        android:text="@string/url_extentions"
                        android:textSize="16sp"
                        android:singleLine="true"
                        android:focusable="false"
                        android:clickable="false"
                        android:focusableInTouchMode="false"
                        android:paddingStart="16dp"
                        android:inputType="none">

                    </EditText>

                </LinearLayout>

            </FrameLayout>

            <TextView
                android:id="@+id/txt_companyURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/company_url"
                android:textSize="12sp"
                android:textColor="@color/blue_transparent" />

            <TextView
                android:id="@+id/txt_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_companyURL"
                android:gravity="center"
                android:text="@string/companyURL"
                android:textSize="12sp"
                android:textColor="@color/blue_transparent" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:background="@drawable/comp_btn_nxt"
                android:layout_margin="12dp"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/need_help"
                android:visibility="gone"
                android:textColor="@color/blue_transparent_pressed"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>

