<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3">

            <TextView
                android:id="@+id/txt_forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txtForgotPassword"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.0"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editUserID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/rounded_change_edittext"
                    android:drawableLeft="@mipmap/ic_person_black_24dp"
                    android:drawablePadding="24dp"
                    android:hint="@string/user_id"
                    android:paddingLeft="24dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:singleLine="true"
                    android:textSize="16sp"
                    android:imeOptions="actionDone"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/edit_company_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/rounded_change_edittext"
                    android:backgroundTint="@color/light_gray"
                    android:drawableLeft="@mipmap/ic_link_black_24dp"
                    android:drawablePadding="24dp"
                    android:hint="xyzpharma.hidoctor.me"
                    android:focusable="false"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
                    android:paddingLeft="24dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <Button
                    android:id="@+id/btn_request_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/comp_btn_change"
                    android:text="@string/forgotPassword_btn"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>

